# ambavia

./: Cargo.toml  LICENSE  README.md
eval/: Cargo.toml
eval/src/: compiler.rs  instruction_builder.rs  lib.rs  vm.rs
eval/tests/: evaluation.rs
parse/: Cargo.toml
parse/src/: analyze_expression_list.rs  ast.rs  ast_parser.rs  latex_parser.rs  latex_tree.rs  latex_tree_flattener.rs  lib.rs  name_resolver.rs  op.rs  type_checker.rs
src/: ast.rs  ast_parser.rs  compiler.rs  expression_list.rs  graph.rs  instruction_builder.rs  katex_font.rs  latex.wgsl  latex_editor.rs  latex_parser.rs  latex_tree.rs  latex_tree_flattener.rs  lib.rs  main.rs  math_field.rs  name_resolver.rs  notes.md  resolver.rs  timer.rs  todo.md  type_checker.rs  ui.rs  utility.rs  vm.rs
src/math_field/: tree.rs
tests/: evaluation.rs
ui/: Cargo.toml
ui/src/: expression_list.rs  graph.rs  graph.wgsl  katex_font.rs  latex.wgsl  lib.rs  main.rs  math_field.rs  ui.rs
ui/src/graph/: sample.rs  sample_explicit.rs  sample_implicit.rs
ui/src/math_field/: tree.rs
ui/tests/: evaluation.rs
