[package]
name = "ambavia"
version = "0.1.0"
edition = "2021"

[dependencies]
cli-clipboard = "0.4.0"
derive_more = { version = "2.0.1", features = ["from", "into"] }
logos = "0.15.0"
num-integer = "0.1.46"
typed-index-collections = "3.2.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_matches = "1.5.0"
rstest = "0.24.0"
