[package]
name = "eval"
version = "0.1.0"
edition = "2024"

[dependencies]
parse = { workspace = true }
typed-index-collections = { workspace = true }
derive_more = { workspace = true }
medians = "3.0.12"
strum = { version = "0.27", features = ["derive"] }
ordered-float = "5.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = "0.25.0"
